# NEAT-Snake

./: .gitignore  CMakeLists.txt  README.md
include/BlockSnake/: BlockSnake.hpp  Coordinate.hpp  Game.hpp  Genetic.hpp  LinkedList.cpp  SnakeList.hpp
include/NeatSnake/: Game.hpp  Genetic.hpp  ThreadPool.hpp
src/: BlockSnake.cpp  Coordinate.cpp  Game.cpp  Genetic.cpp  SnakeList.cpp  ThreadPool.cpp  main.cpp  play_snake.cpp  watchGame.cpp
tests/: CMakeLists.txt  Genetic_Tests.cpp  LinkedList_Tests.cpp  Serial_Tests.cpp  SnakeList_Tests.cpp  ThreadPool_Tests.cpp  test.net
